# agent

./: LICENSE  README.md  package-lock.json  package.json
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/animations/: intro.json
src/scripts/: index.js
src/sites/: main.html
src/style/: index.css
