[package]
name = "enzete-agent"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "window-start-dragging"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["stream"] }
tokio = "1.33.0"
rust-lzma = "0.6.0"
futures-util = "0.3.28"
tar = "0.4.40"
dirs = "5.0.1"
serde_json = "1.0.107"
futures = "0.3.29"
rodio = "0.17.3"
whoami = "1.4.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
